SpringFramework 組み込みのWebSocket APIを使ったデモ作成

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,6 +9,7 @@
 <ul>
 <li><a th:href="@{/sse-demo/}" target="_blank">SseEmitterを使った Server-Sent Events のデモ</a></li>
 <li><a th:href="@{/sse-chatroom}" target="_blank">SseEmitterとServer-Sent Eventsによるチャットのサンプル</a>(ログインチェック付き)</li>
+<li><a th:href="@{/plain-ws-demo.html}" target="_blank">Spring Framework 組み込みのWebSocket APIのデモ</a></li>
 </ul>
 </body>
 </html>
